Fix layout issue mentioned in #56

--- a/resources/components/common.less
+++ b/resources/components/common.less
@@ -54,6 +54,10 @@ dl {
 	margin: @content-margin-top 0 0 0;
 }
 
+p:first-of-type {
+	margin-top: 0;
+}
+
 pre,
 code,
 tt,
